--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev:ssr": "tsx server/index.ts",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build:ssg": "tsx scripts/build-ssg.ts",
+    "preview": "npm run build && npm run dev:ssr",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
@@ -33,12 +37,17 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
-    "vite-plugin-pwa": "^0.19.2"
+    "vite-plugin-pwa": "^0.19.2",
+    "express": "^4.18.2",
+    "compression": "^1.7.4",
+    "sirv": "^2.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/express": "^4.17.21",
+    "@types/compression": "^1.7.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
@@ -49,6 +58,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "tsx": "^4.7.0",
+    "vite": "^5.4.2",
+    "web-vitals": "^3.5.0"
   }
 }
