--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,17 +39,15 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
-    "vite-plugin-pwa": "^0.19.2",
-    "express": "^4.18.2",
-    "compression": "^1.7.4",
-    "sirv": "^2.0.4"
+    "sirv": "^2.0.4",
+    "vite-plugin-pwa": "^0.19.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/express": "^4.17.21",
-    "@types/compression": "^1.7.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
@@ -56,10 +56,10 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "tsx": "^4.7.0",
     "vite": "^5.4.2",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^5.0.3"
   }
 }
