--- a/package.json
+++ b/package.json
@@ -1,65 +1,32 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "aitoonic-nextjs",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:ssr": "tsx server/index.ts",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "build:ssg": "tsx scripts/build-ssg.ts",
-    "preview": "npm run build && npm run dev:ssr",
-    "lint": "eslint ."
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@supabase/supabase-js": "^2.39.7",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tiptap/extension-bold": "^2.2.4",
-    "@tiptap/extension-document": "^2.2.4",
-    "@tiptap/extension-heading": "^2.2.4",
-    "@tiptap/extension-highlight": "^2.2.4",
-    "@tiptap/extension-image": "^2.2.4",
-    "@tiptap/extension-link": "^2.2.4",
-    "@tiptap/extension-paragraph": "^2.2.4",
-    "@tiptap/extension-placeholder": "^2.2.4",
-    "@tiptap/extension-text": "^2.2.4",
-    "@tiptap/extension-text-align": "^2.2.4",
-    "@tiptap/extension-underline": "^2.2.4",
-    "@tiptap/pm": "^2.2.4",
-    "@tiptap/react": "^2.2.4",
-    "@tiptap/starter-kit": "^2.2.4",
-    "compression": "^1.7.4",
-    "express": "^4.18.2",
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.4",
-    "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.3",
-    "sirv": "^2.0.4",
-    "vite-plugin-pwa": "^0.19.2"
+    "@tailwindcss/typography": "^0.5.16",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/compression": "^1.7.5",
-    "@types/express": "^4.17.21",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "web-vitals": "^5.0.3"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
